--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/icerahi/assignment-3#readme",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-plugin-node": "^11.1.0",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
